# budgetplanner

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
budgetplanner/: manage.py
budgetplanner/budgetplanner/: asgi.py  settings.py  settings_tests.py  urls.py  wsgi.py
budgetplanner/core/: admin.py  constants.py  models.py  serializers.py  urls.py  views.py
budgetplanner/core/management/commands/: demodata.py
budgetplanner/core/migrations/: 0001_initial.py  0002_initial.py
budgetplanner/fixtures/: inital_ShareBudget.json  inital_data_budgest.json  inital_data_sharebudget.json  inital_data_transaction.json  inital_transaction.json
budgetplanner/project/: asgi.py  settings.py  urls.py  wsgi.py
budgetplanner/users/: admin.py  managers.py  models.py  serializers.py  views.py
budgetplanner/users/migrations/: 0001_initial.py
docker/: Dockerfile  Dockerfile.tests  docker-compose.env  docker-compose.yml  init.sql  local.compose.env  start-app.sh
docs/insomnia-collection/: Insomnia.yaml
tests/: conftest.py  factories.py
tests/core/: test_models.py  test_views.py  test_views_budgets.py
